# glasspane

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/agents/: glasspane-analyze.md  glasspane-chain.md  glasspane-poc.md  glasspane-recon.md  glasspane-validate.md
.claude/skills/glasspane-scan/: SKILL.md
src/glasspane/: __init__.py  cli.py  client.py  config.py  models.py  profiles.py  sandbox.py
src/glasspane/phases/: __init__.py  analyze.py  rank.py  report.py  validate.py
