[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glasspane"
version = "0.1.0"
description = "AI-powered security scanning scaffold"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "tiktoken>=0.7",
]

[project.scripts]
glasspane = "glasspane.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
